<resources>
    <!-- Main Activity -->
    <string name="app_name">CookbookApp</string>
    <string name="email_address">Email address</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="cookbook">Cookbook</string>
    <string name="create_new_account">Create New Account</string>
    <string name="login">Login</string>

    <!-- Dashboard -->
    <string name="search">Search</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="my_recipe">My Recipe</string>
    <string name="tags">Tags</string>
    <string name="favourites">Favourites</string>
    <string name="history">History</string>
    <string name="logout">Logout</string>
    <string name="recipeName">Recipe Name</string>
    <string name="ingredients">Ingredients</string>
    <string name="add_tags">Add Tags</string>
    <string name="add_photo">Add Photo</string>
    <string name="enter_recipe_name">Enter recipe name</string>
    <string name="description">Description</string>
    <string name="extra_information">Extra Information</string>
    <string name="photo">Photo</string>
    <string name="enter_recipe_description">Enter recipe description</string>
    <string name="recipe_notes">Recipe Notes</string>
    <string name="video_link">Video Link</string>
    <string name="enter_recipe_notes">Enter recipe notes</string>
    <string name="enter_video_link">Enter video link</string>
    <string name="enter_ingredients">Enter ingredients</string>
    <string name="enter_extra_information">Enter extra information</string>
    <string name="back"><![CDATA[< Back]]></string>
    <string name="submit">Submit</string>
    <string name="recipe_photo">Recipe Photo</string>
    <string name="link_content">Link Content</string>
    <string name="extra_information_content">Extra Information Content</string>
    <string name="ingredients_content">Ingredients Content</string>
    <string name="notes_content">Notes Content</string>
    <string name="notes">Notes</string>
    <string name="description_content">Description Content</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="delete_recipe">Delete Recipe</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="delete_account">Delete Account</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="id">ID</string>
    <string name="uid">UID</string>
    <string name="first_name">First Name</string>
    <string name="enter_your_first_name">Enter your first name</string>
    <string name="enter_your_last_name">Enter your last name</string>
    <string name="enter_your_password_again">Enter your password again</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="last_name">Last Name</string>
    <string name="my_profile">My Profile</string>
    <string name="enter_your_new_password">Enter your new password</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="save">Save</string>
    <string name="change_password_enter_the_old_password">Change Password (Enter the old password)</string>
    <string name="edit_recipe">Edit Recipe</string>
    <string name="by_xxx">By XXX</string>
    <string name="error_message">Error Message</string>
    <string name="read_before_you_delete">Read before you delete</string>
    <string name="delete_account_content">After you have delete your account your email will be removed from the database\nAre you sure you want to proceed?</string>
    <string name="tags_content">Tags Content</string>
    <string name="change_photo">Change Photo</string>
    <string name="are_you_sure_you_want_to_delete_the_recipe_nafter_you_delete_the_recipe_it_will_not_be_recovered">Are you sure you want to delete the recipe.\nAfter you delete the recipe it will not be recovered</string>
    <string name="delete_recipe">Delete Recipe</string>
    <string name="string_delete_recipe">Delete Recipe</string>

</resources>