<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".recipe.EditRecipe">

    <ScrollView
        android:id="@+id/sv_create_recipe"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/back_button"
                style="@style/theme_yellow_back_button"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/back"
                android:textAlignment="textStart"
                tools:ignore="TextContrastCheck,TextContrastCheck" />

            <TextView
                android:id="@+id/textView_recipeNameTitle"
                style="@style/textView"
                android:text="@string/recipeName" />

            <EditText
                android:id="@+id/edit_recipeName"
                style="@style/editText"
                android:hint="@string/enter_recipe_name"
                tools:ignore="SpeakableTextPresentCheck"
                android:autofillHints="" />

            <TextView
                android:id="@+id/recipeDescriptionTitle"
                style="@style/textView"
                android:text="@string/description" />

            <EditText
                android:id="@+id/edit_recipeDescription"
                style="@style/editText"
                android:inputType="textMultiLine"
                android:hint="@string/enter_recipe_description"
                tools:ignore="SpeakableTextPresentCheck"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/recipeNoteTitle"
                style="@style/textView"
                android:text="@string/recipe_notes" />

            <EditText
                android:id="@+id/edit_recipeNotes"
                style="@style/editText"
                android:inputType="textMultiLine"
                android:hint="@string/enter_recipe_notes"
                android:importantForAutofill="no"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/recipeTagsTitle"
                style="@style/textView"
                android:text="@string/tags" />

            <TextView
                android:id="@+id/textView_tag_list_error_message"
                style="@style/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/error_message"
                android:textColor="@color/bs_danger"
                android:textSize="12sp"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_edit_tag_checkbox"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_marginLeft="@dimen/textMarginX"
                android:layout_marginTop="@dimen/textMarginY15"
                android:layout_marginRight="@dimen/textMarginX"
                android:scrollbars="vertical" />

            <TextView
                android:id="@+id/recipeImageTitle"
                style="@style/textView"
                android:text="@string/photo" />

            <TextView
                android:id="@+id/textView_photo_error_message"
                style="@style/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/error_message"
                android:textColor="@color/bs_danger"
                android:textSize="12sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/editImageBtn"
                style="@style/theme_yellow_small_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="100dp"
                android:backgroundTint="@color/theme_yellow_dark"
                android:text="@string/change_photo"
                tools:ignore="TextContrastCheck" />

            <ImageView
                android:id="@+id/imageView_recipe_photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/textMarginX"
                android:layout_marginRight="@dimen/textMarginX"
                android:contentDescription="@string/recipe_photo"
                android:src="@drawable/common_google_signin_btn_icon_dark_normal_background"
                android:visibility="gone" />

            <TextView
                android:id="@+id/recipeYoutubeLinkTitle"
                style="@style/textView"
                android:text="@string/video_link" />

            <EditText
                android:id="@+id/edit_recipeVideoLink"
                style="@style/editText"
                android:hint="@string/enter_video_link"
                android:importantForAutofill="no"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/recipeExtraInfoTitle"
                style="@style/textView"
                android:text="@string/extra_information" />

            <EditText
                android:id="@+id/edit_recipeExtraInfo"
                style="@style/editText"
                android:inputType="textMultiLine"
                android:hint="@string/enter_extra_information"
                android:importantForAutofill="no"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/recipeIngredientsTitle"
                style="@style/textView"
                android:text="@string/ingredients" />

            <EditText
                android:id="@+id/edit_addNewIngredients"
                style="@style/editText"
                android:inputType="textMultiLine"
                android:hint="@string/enter_ingredients"
                android:importantForAutofill="no"
                tools:ignore="SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/button_save"
                style="@style/theme_yellow_button"
                android:layout_marginBottom="@dimen/textMarginY20"
                android:text="@string/submit"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/button_delete"
                style="@style/theme_yellow_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete_recipe" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>