<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/button_view_recipe_back"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".recipe.ViewRecipe">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_view_recipe_back_to_dashboard"
            style="@style/theme_yellow_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textView_view_recipe_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/textMarginX"
            android:layout_marginTop="@dimen/textMarginY20"
            android:layout_marginEnd="@dimen/textMarginX"
            android:layout_marginBottom="@dimen/textMarginY15"
            android:text="@string/recipe_name"
            android:textAlignment="center"
            android:textSize="24sp" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView_view_recipe"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/textMarginX"
                android:layout_marginTop="@dimen/textMarginY15"
                android:layout_marginRight="@dimen/textMarginX"
                android:layout_marginBottom="@dimen/textMarginY15"
                android:text="@string/by_xxx"
                android:textAlignment="center" />

            <ImageView
                android:id="@+id/imageView_view_recipe_photo"
                android:layout_width="match_parent"
                android:layout_height="183dp"
                android:layout_marginBottom="@dimen/textMarginY20"
                android:contentDescription="@string/recipe_photo"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/textView_view_description"
                style="@style/textView_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description" />

            <TextView
                android:id="@+id/textView_description_content"
                style="@style/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description_content" />

            <TextView
                android:id="@+id/textView_view_notes"
                style="@style/textView_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notes" />

            <TextView
                android:id="@+id/textView_notes_content"
                style="@style/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notes_content" />

            <TextView
                android:id="@+id/textView_view_ingredients"
                style="@style/textView_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ingredients" />

            <TextView
                android:id="@+id/textView_ingredients_content"
                style="@style/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ingredients_content" />

            <TextView
                android:id="@+id/textView_view_extra_information"
                style="@style/textView_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/extra_information" />

            <TextView
                android:id="@+id/textView_extra_information_content"
                style="@style/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/extra_information_content" />

            <TextView
                android:id="@+id/textView_view_link"
                style="@style/textView_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/video_link" />

            <TextView
                android:id="@+id/textView_link_content"
                style="@style/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/link_content" />

            <Button
                android:id="@+id/button_to_edit_recipe"
                style="@style/theme_yellow_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/textMarginY20"
                android:text="@string/edit_recipe"
                android:visibility="gone"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>