<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.cookbookapp.account.CreateAccount">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/button_back_to_login"
                style="@style/theme_yellow_back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                tools:ignore="TextContrastCheck"
                tools:layout_editor_absoluteX="131dp"
                tools:layout_editor_absoluteY="14dp" />

            <TextView
                android:id="@+id/create_first_name"
                style="@style/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/first_name" />

            <EditText
                android:id="@+id/editText_create_acc_first_name"
                style="@style/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/enter_your_first_name"
                android:inputType="textPersonName"
                android:autofillHints="" />

            <TextView
                android:id="@+id/create_last_name"
                style="@style/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/last_name" />

            <EditText
                android:id="@+id/editText_create_acc_last_name"
                style="@style/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/enter_your_last_name"
                android:inputType="textPersonName"
                android:autofillHints="" />

            <TextView
                android:id="@+id/create_email"
                style="@style/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email" />

            <EditText
                android:id="@+id/editText_create_acc_email"
                style="@style/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/enter_your_email"
                android:inputType="textEmailAddress"
                android:autofillHints="" />

            <TextView
                android:id="@+id/create_create_password"
                style="@style/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password" />

            <EditText
                android:id="@+id/editText_create_acc_password"
                style="@style/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:importantForAutofill="no" />
<!--
            <TextView
                android:id="@+id/create_re_enter_password"
                style="@style/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/re_enter_password" />

            <EditText
                android:id="@+id/editTextcreate_acc_re_enter_password"
                style="@style/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/enter_your_password_again"
                android:inputType="textPassword"
                android:importantForAutofill="no" />
-->
            <Button
                android:id="@+id/button_create_account"
                style="@style/theme_yellow_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>